--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -11,7 +11,7 @@
     "# M2 Innovation Technologique et Entrepreunariat\n",
     "## Introduction au Machine Learning en situation\n",
     "\n",
-    "Auteurs: Guillaume Corlais & Marie Crappe\n",
+    "Auteurs: Guillaume Corlay & Marie Crappe\n",
     "\n",
     "Date: 9 décembre 2016"
    ]
@@ -21902,7 +21902,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
