Moving imports to the top and few corrections

--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -51,6 +51,10 @@
     "import warnings\n",
     "import re\n",
     "from sklearn.preprocessing import Imputer\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import roc_auc_score, log_loss\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -197,7 +201,7 @@
        "4                                2   2008  0.000000  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +319,7 @@
        "4   2008  0.000000  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -436,7 +440,7 @@
        "max    8.058700e+04  9.372200e+04  2.013000e+03  1.000000e+00"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,230 +456,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RS</th>\n",
-       "      <th>Activite</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Nb_MCO</th>\n",
-       "      <th>Nb_Sejours</th>\n",
-       "      <th>Annee</th>\n",
-       "      <th>Target</th>\n",
-       "      <th>Dept_01-Ain</th>\n",
-       "      <th>Dept_02-Aisne</th>\n",
-       "      <th>Dept_03-Allier</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Dept_973-Guyane</th>\n",
-       "      <th>Dept_974-La Réunion</th>\n",
-       "      <th>Dept_975-Saint-Pierre-et-Miquelon</th>\n",
-       "      <th>Dept_976-Mayotte</th>\n",
-       "      <th>Dept_977-Saint-Barthélemy</th>\n",
-       "      <th>Dept_978-Saint-Martin</th>\n",
-       "      <th>Dept_986-Wallis-et-Futuna</th>\n",
-       "      <th>Dept_987-Polynésie Française</th>\n",
-       "      <th>Dept_988-Nouvelle-Calédonie</th>\n",
-       "      <th>Dept_Inconnu</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>D01-Digestif</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1061</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.010624</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>D01-Digestif</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>48</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.053320</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>D07-Cardio-vasculaire (hors cathétérismes vasc...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>D16-Hématologie</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CLINIQUE AMBULATOIRE CENDANEG</td>\n",
-       "      <td>D16-Hématologie</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 115 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              RS  \\\n",
-       "0  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "1  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "2  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "3  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "4  CLINIQUE AMBULATOIRE CENDANEG   \n",
-       "\n",
-       "                                            Activite Age  Nb_MCO  Nb_Sejours  \\\n",
-       "0                                       D01-Digestif   0      19        1061   \n",
-       "1                                       D01-Digestif   1       5          48   \n",
-       "2  D07-Cardio-vasculaire (hors cathétérismes vasc...   0       0           1   \n",
-       "3                                    D16-Hématologie   0       0          17   \n",
-       "4                                    D16-Hématologie   1       0           2   \n",
-       "\n",
-       "   Annee    Target  Dept_01-Ain  Dept_02-Aisne  Dept_03-Allier      ...       \\\n",
-       "0   2008  0.010624          1.0            0.0             0.0      ...        \n",
-       "1   2008  0.053320          1.0            0.0             0.0      ...        \n",
-       "2   2008  0.000000          1.0            0.0             0.0      ...        \n",
-       "3   2008  0.000000          1.0            0.0             0.0      ...        \n",
-       "4   2008  0.000000          1.0            0.0             0.0      ...        \n",
-       "\n",
-       "   Dept_973-Guyane  Dept_974-La Réunion  Dept_975-Saint-Pierre-et-Miquelon  \\\n",
-       "0              0.0                  0.0                                0.0   \n",
-       "1              0.0                  0.0                                0.0   \n",
-       "2              0.0                  0.0                                0.0   \n",
-       "3              0.0                  0.0                                0.0   \n",
-       "4              0.0                  0.0                                0.0   \n",
-       "\n",
-       "   Dept_976-Mayotte  Dept_977-Saint-Barthélemy  Dept_978-Saint-Martin  \\\n",
-       "0               0.0                        0.0                    0.0   \n",
-       "1               0.0                        0.0                    0.0   \n",
-       "2               0.0                        0.0                    0.0   \n",
-       "3               0.0                        0.0                    0.0   \n",
-       "4               0.0                        0.0                    0.0   \n",
-       "\n",
-       "   Dept_986-Wallis-et-Futuna  Dept_987-Polynésie Française  \\\n",
-       "0                        0.0                           0.0   \n",
-       "1                        0.0                           0.0   \n",
-       "2                        0.0                           0.0   \n",
-       "3                        0.0                           0.0   \n",
-       "4                        0.0                           0.0   \n",
-       "\n",
-       "   Dept_988-Nouvelle-Calédonie  Dept_Inconnu  \n",
-       "0                          0.0           0.0  \n",
-       "1                          0.0           0.0  \n",
-       "2                          0.0           0.0  \n",
-       "3                          0.0           0.0  \n",
-       "4                          0.0           0.0  \n",
-       "\n",
-       "[5 rows x 115 columns]"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-658714d32c4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdept_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_dummies\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDept\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprefix\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Dept\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdept_table\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Dept'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\MC731340\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape.py\u001b[0m in \u001b[0;36mget_dummies\u001b[0;34m(data, prefix, prefix_sep, dummy_na, columns, sparse, drop_first)\u001b[0m\n\u001b[1;32m   1096\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1097\u001b[0m         result = _get_dummies_1d(data, prefix, prefix_sep, dummy_na,\n\u001b[0;32m-> 1098\u001b[0;31m                                  sparse=sparse, drop_first=drop_first)\n\u001b[0m\u001b[1;32m   1099\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1100\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\MC731340\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape.py\u001b[0m in \u001b[0;36m_get_dummies_1d\u001b[0;34m(data, prefix, prefix_sep, dummy_na, sparse, drop_first)\u001b[0m\n\u001b[1;32m   1164\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1165\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1166\u001b[0;31m         \u001b[0mdummy_mat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meye\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber_of_cols\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1167\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1168\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mdummy_na\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mMemoryError\u001b[0m: "
+     ]
     }
    ],
    "source": [
     "dept_table = pd.get_dummies(train.Dept, prefix=\"Dept\")\n",
     "train = pd.concat([train, dept_table], axis=1)\n",
     "train.drop('Dept', axis=1, inplace=True)\n",
+    "\n",
+    "train = pd.get_dummies(train, columns=['Dept', 'Activite'])\n",
     "train.head()"
    ]
   },
@@ -1201,17 +1006,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-87-11ab1393cf39>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-7-11ab1393cf39>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-87-11ab1393cf39>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <h2> 2. Préparation des folds </h2>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-11ab1393cf39>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <h2> 2. Préparation des folds </h2>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1258,10 +1063,8 @@
     "df_train = train2.iloc[:N_split]\n",
     "df_test = train2.iloc[N_split:]\n",
     "\n",
-    "#df_train = df_train.loc[df_train.QUANTITY_2DAYS < 1100]\n",
-    "\n",
-    "y_train = df_train.Target\n",
-    "y_test = df_test.Target\n",
+    "y_train = df_train['Target']\n",
+    "y_test = df_test['Target']\n",
     "\n",
     "df_train = df_train.drop('Target', axis=1)\n",
     "df_test = df_test.drop('Target', axis=1)"
@@ -1371,8 +1174,7 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "lr = LogisticRegression()\n",
+    "lr = LogisticRegression(n_jobs=-1)\n",
     "lr.fit(xtrain,ytrain)"
    ]
   },
@@ -1400,10 +1202,9 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import roc_auc_score, log_loss\n",
-    "lr_preds = lr.predict_proba(xtest)[:,1]\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytest, lr_preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytest,lr_preds)))"
+    "lr_preds = lr.predict_proba(X_test)[:,1]\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_test, lr_preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_test, lr_preds)))"
    ]
   },
   {
@@ -1435,9 +1236,8 @@
     }
    ],
    "source": [
-    "from sklearn.svm import LinearSVC\n",
     "svm = LinearSVC()\n",
-    "svm.fit(xtrain,ytrain)"
+    "svm.fit(X_train,y_train)"
    ]
   },
   {
@@ -1457,9 +1257,9 @@
     }
    ],
    "source": [
-    "svm_preds = svm.predict(xtest)\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytest, svm_preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytest,svm_preds)))"
+    "svm_preds = svm.predict(X_test)\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_test, svm_preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_test,svm_preds)))"
    ]
   },
   {
@@ -1493,19 +1293,9 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "gbm = GradientBoostingClassifier(loss='exponential')\n",
-    "gbm.fit(xtrain,ytrain)"
+    "gbm.fit(X_train,y_train)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1532,9 +1322,9 @@
     }
    ],
    "source": [
-    "gbm_preds = gbm.predict_proba(xtest)[:,1]\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytest, gbm_preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytest,gbm_preds)))"
+    "gbm_preds = gbm.predict_proba(X_test)[:,1]\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_test, gbm_preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_test,gbm_preds)))"
    ]
   },
   {
@@ -1587,10 +1377,10 @@
     "                                 max_depth=5,\n",
     "                                 subsample=0.75,\n",
     "                                 verbose=1)\n",
-    "gbm.fit(xtrain, ytrain)\n",
-    "gbm_preds = gbm.predict_proba(xtest)[:,1]\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytest, gbm_preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytest,gbm_preds)))"
+    "gbm.fit(X_train, y_train)\n",
+    "gbm_preds = gbm.predict_proba(X_test)[:,1]\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_test, gbm_preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_test,gbm_preds)))"
    ]
   },
   {
@@ -22367,7 +22157,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
