Moving all imports to the top of the notebook

--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Auteurs: Guillaume Corlay & Marie Crappe & Livia Sossou\n",
     "\n",
-    "Date: 9 décembre 2016"
+    "Date: 4 janvier 2017"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -46,10 +46,24 @@
     }
    ],
    "source": [
+    "# The following command imports numpy as np and matplotlib as plt\n",
     "%pylab inline\n",
     "import pandas as pd\n",
-    "import warnings\n",
+    "import multiprocessing\n",
+    "\n",
     "from sklearn.preprocessing import Imputer\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import roc_auc_score, log_loss\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
+    "from sklearn.ensemble.partial_dependence import plot_partial_dependence\n",
+    "\n",
+    "from sklearn.cross_validation import KFold, cross_val_score\n",
+    "from itertools import combinations\n",
+    "from joblib import Parallel, delayed  \n",
+    "\n",
+    "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -906,7 +920,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
     "lr = LogisticRegression()\n",
     "lr.fit(xtrain,ytrain)"
    ]
@@ -935,7 +948,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import roc_auc_score, log_loss\n",
     "lr_preds = lr.predict_proba(xtest)[:,1]\n",
     "print(\"auc:      {}\".format(roc_auc_score(ytest, lr_preds)))\n",
     "print(\"log_loss: {}\".format(log_loss(ytest,lr_preds)))"
@@ -970,7 +982,6 @@
     }
    ],
    "source": [
-    "from sklearn.svm import LinearSVC\n",
     "svm = LinearSVC()\n",
     "svm.fit(xtrain,ytrain)"
    ]
@@ -1028,19 +1039,9 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "gbm = GradientBoostingClassifier(loss='exponential')\n",
     "gbm.fit(xtrain,ytrain)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1189,7 +1190,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "plt.plot(aucs)\n",
     "plt.title(\"AUCs for cumulated boosts until `n_estimators`\")\n",
     "plt.xlabel(\"number of trees\")\n",
@@ -1229,7 +1229,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "# sort importances\n",
     "indices = np.argsort(gbm.feature_importances_)\n",
     "# plot as bar chart\n",
@@ -1257,7 +1256,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble.partial_dependence import plot_partial_dependence\n",
     "features =  [u'RevolvingUtilizationOfUnsecuredLines',\n",
     "             u'age',\n",
     "             u'NumberOfTime30-59DaysPastDueNotWorse',\n",
@@ -1302,8 +1300,6 @@
     }
    ],
    "source": [
-    "from itertools import combinations\n",
-    "\n",
     "_ = plot_partial_dependence(gbm, xtrain, combinations(top4,2),\n",
     "                        feature_names=features_names, figsize=(15,15))"
    ]
@@ -1659,14 +1655,9 @@
     }
    ],
    "source": [
-    "import multiprocessing\n",
+    "\n",
     "num_cores = multiprocessing.cpu_count()\n",
-    "from sklearn.cross_validation import KFold\n",
     "kf = list(KFold(len(xtrain),num_cores))\n",
-    "\n",
-    "from joblib import Parallel, delayed  \n",
-    "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "def fit_model(traini):\n",
     "    rfc = RandomForestClassifier()\n",
