--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -779,8 +779,8 @@
     "\n",
     "K = kfolds(seed=3894,k=5,N=len(train2))\n",
     "fold1 = sum(K[1:5],[]) # K[1] + K[2] + K[3] + K[4]\n",
-    "xtrain = train2.iloc[fold1][train2.keys()[:-1]]\n",
-    "ytrain = train2.iloc[fold1][train2.keys()[-1]]"
+    "X_train = train2.iloc[fold1][train2.keys()[:-1]]\n",
+    "y_train = train2.iloc[fold1][train2.keys()[-1]]"
    ]
   },
   {
@@ -806,8 +806,6 @@
     "\n",
     "df_train = train2.iloc[:N_split]\n",
     "df_test = train2.iloc[N_split:]\n",
-    "\n",
-    "#df_train = df_train.loc[df_train.QUANTITY_2DAYS < 1100]\n",
     "\n",
     "y_train = df_train.Target\n",
     "y_test = df_test.Target\n",
@@ -849,10 +847,10 @@
    "source": [
     "imp = Imputer(missing_values='NaN', strategy='median', axis=0)\n",
     "train = imp.fit_transform(train)\n",
-    "xtrain = train[fold1,1:]\n",
-    "ytrain = train[fold1,0]\n",
-    "xtest = train[K[0],1:]\n",
-    "ytest = train[K[0],0]"
+    "X_train = train[fold1,1:]\n",
+    "y_train = train[fold1,0]\n",
+    "X_test = train[K[0],1:]\n",
+    "y_test = train[K[0],0]"
    ]
   },
   {
@@ -921,7 +919,7 @@
    ],
    "source": [
     "lr = LogisticRegression()\n",
-    "lr.fit(xtrain,ytrain)"
+    "lr.fit(X_train,y_train)"
    ]
   },
   {
@@ -948,9 +946,9 @@
     }
    ],
    "source": [
-    "lr_preds = lr.predict_proba(xtest)[:,1]\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytest, lr_preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytest,lr_preds)))"
+    "lr_preds = lr.predict_proba(X_test)[:,1]\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_test, lr_preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_test,lr_preds)))"
    ]
   },
   {
@@ -983,7 +981,7 @@
    ],
    "source": [
     "svm = LinearSVC()\n",
-    "svm.fit(xtrain,ytrain)"
+    "svm.fit(X_train,y_train)"
    ]
   },
   {
@@ -1003,9 +1001,9 @@
     }
    ],
    "source": [
-    "svm_preds = svm.predict(xtest)\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytest, svm_preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytest,svm_preds)))"
+    "svm_preds = svm.predict(X_test)\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_test, svm_preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_test,svm_preds)))"
    ]
   },
   {
@@ -1040,7 +1038,7 @@
    ],
    "source": [
     "gbm = GradientBoostingClassifier(loss='exponential')\n",
-    "gbm.fit(xtrain,ytrain)"
+    "gbm.fit(X_train,y_train)"
    ]
   },
   {
@@ -1068,9 +1066,9 @@
     }
    ],
    "source": [
-    "gbm_preds = gbm.predict_proba(xtest)[:,1]\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytest, gbm_preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytest,gbm_preds)))"
+    "gbm_preds = gbm.predict_proba(X_test)[:,1]\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_test, gbm_preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_test,gbm_preds)))"
    ]
   },
   {
@@ -1123,10 +1121,10 @@
     "                                 max_depth=5,\n",
     "                                 subsample=0.75,\n",
     "                                 verbose=1)\n",
-    "gbm.fit(xtrain, ytrain)\n",
-    "gbm_preds = gbm.predict_proba(xtest)[:,1]\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytest, gbm_preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytest,gbm_preds)))"
+    "gbm.fit(X_train, y_train)\n",
+    "gbm_preds = gbm.predict_proba(X_test)[:,1]\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_test, gbm_preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_test,gbm_preds)))"
    ]
   },
   {
@@ -1151,7 +1149,7 @@
    },
    "outputs": [],
    "source": [
-    "aucs = [ roc_auc_score(ytest, gbm_pred[:,1]) for gbm_pred in gbm.staged_predict_proba(xtest) ]"
+    "aucs = [ roc_auc_score(y_test, gbm_pred[:,1]) for gbm_pred in gbm.staged_predict_proba(X_test) ]"
    ]
   },
   {
@@ -1269,7 +1267,7 @@
     "             (u'MonthlyIncome',u'age')\n",
     "            ]\n",
     "top4 = features_names[-1:-5:-1]\n",
-    "_ = plot_partial_dependence(gbm, xtrain, top4,\n",
+    "_ = plot_partial_dependence(gbm, X_train, top4,\n",
     "                            feature_names=features_names,figsize=(16,16))"
    ]
   },
@@ -1300,7 +1298,7 @@
     }
    ],
    "source": [
-    "_ = plot_partial_dependence(gbm, xtrain, combinations(top4,2),\n",
+    "_ = plot_partial_dependence(gbm, X_train, combinations(top4,2),\n",
     "                        feature_names=features_names, figsize=(15,15))"
    ]
   },
@@ -1657,20 +1655,20 @@
    "source": [
     "\n",
     "num_cores = multiprocessing.cpu_count()\n",
-    "kf = list(KFold(len(xtrain),num_cores))\n",
+    "kf = list(KFold(len(X_train),num_cores))\n",
     "\n",
     "def fit_model(traini):\n",
     "    rfc = RandomForestClassifier()\n",
-    "    rfc.fit(xtrain[traini], ytrain[traini])\n",
+    "    rfc.fit(X_train[traini], y_train[traini])\n",
     "    return(rfc)\n",
     "\n",
-    "kf = list(KFold(len(xtrain),num_cores))\n",
+    "kf = list(KFold(len(X_train),num_cores))\n",
     "rfcs = Parallel(n_jobs=num_cores)( delayed(fit_model)(traini) for traini,_ in kf)\n",
-    "preds = np.empty_like(ytrain)\n",
+    "preds = np.empty_like(y_train)\n",
     "for i,(_,testi) in enumerate(kf):\n",
-    "    preds[testi] = rfcs[i].predict_proba(xtrain[testi])[:,1]\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytrain, preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytrain,preds)))"
+    "    preds[testi] = rfcs[i].predict_proba(X_train[testi])[:,1]\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_train, preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_train,preds)))"
    ]
   },
   {
@@ -17729,10 +17727,10 @@
     "#gs = GridSearchCV(RandomForestClassifier(n_jobs=-1), \n",
     "#                  {'max_features' : range(1,11), 'n_estimators': [500]}, \n",
     "#                  scoring='roc_auc')\n",
-    "#gs.fit(xtrain,ytrain)\n",
+    "#gs.fit(X_train,y_train)\n",
     "#print(gs.best_params_) #Outputs {'max_features':1, 'n_estimators' : 500}\n",
     "cross_val_score(RandomForestClassifier(max_features=1,n_estimators=500,n_jobs=-1),\n",
-    "                xtrain, ytrain, cv=num_cores, scoring='roc_auc').mean()"
+    "                X_train, y_train, cv=num_cores, scoring='roc_auc').mean()"
    ]
   },
   {
@@ -21769,7 +21767,7 @@
    ],
    "source": [
     "rfc = RandomForestClassifier(n_estimators=500,max_features=1,n_jobs=-1)\n",
-    "rfc.fit(xtrain,ytrain)\n",
+    "rfc.fit(X_train,y_train)\n",
     "indices = np.argsort(rfc.feature_importances_)\n",
     "# plot as bar chart\n",
     "plt.barh(np.arange(len(features_names)), rfc.feature_importances_[indices])\n",
@@ -21806,14 +21804,14 @@
     "                                     max_depth = 5,\n",
     "                                     subsample = .75,\n",
     "                                     verbose = 0)\n",
-    "    gbm.fit(xtrain[traini],ytrain[traini])\n",
+    "    gbm.fit(X_train[traini],y_train[traini])\n",
     "    return(gbm)\n",
     "\n",
     "gbms = Parallel(n_jobs=num_cores)( delayed(fit_gbm)(traini) for traini,_ in kf)\n",
     "\n",
     "def fit_rfc(traini):\n",
     "    rfc = RandomForestClassifier(n_estimators=500,max_features=1)\n",
-    "    rfc.fit(xtrain[traini],ytrain[traini])\n",
+    "    rfc.fit(X_train[traini],y_train[traini])\n",
     "    return(rfc)\n",
     "\n",
     "rfcs = Parallel(n_jobs=num_cores)( delayed(fit_rfc)(traini) for traini,_ in kf)"
@@ -21827,12 +21825,12 @@
    },
    "outputs": [],
    "source": [
-    "preds = np.empty_like(ytrain)\n",
+    "preds = np.empty_like(y_train)\n",
     "for i,(_,testi) in enumerate(kf):\n",
-    "    preds[testi] = (.07*rfcs[i].predict_proba(xtrain[testi])[:,1] +\n",
-    "                    .93*gbms[i].predict_proba(xtrain[testi])[:,1])\n",
-    "print(\"auc:      {}\".format(roc_auc_score(ytrain, preds)))\n",
-    "print(\"log_loss: {}\".format(log_loss(ytrain,preds)))"
+    "    preds[testi] = (.07*rfcs[i].predict_proba(X_train[testi])[:,1] +\n",
+    "                    .93*gbms[i].predict_proba(X_train[testi])[:,1])\n",
+    "print(\"auc:      {}\".format(roc_auc_score(y_train, preds)))\n",
+    "print(\"log_loss: {}\".format(log_loss(y_train,preds)))"
    ]
   },
   {
@@ -21856,10 +21854,10 @@
     "                                 max_depth = 5,\n",
     "                                 subsample = .75,\n",
     "                                 verbose = 0)\n",
-    "gbm.fit(xtrain,ytrain)\n",
+    "gbm.fit(X_train,y_train)\n",
     "rfc = RandomForestClassifier(n_estimators=500,\n",
     "                             max_features=1)\n",
-    "rfc.fit(xtrain,ytrain)\n",
+    "rfc.fit(X_train,y_train)\n",
     "\n",
     "testname = \"cs-test.csv\"\n",
     "testf = datapath + testname\n",
