Moving all imports to the top and updated header

--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -11,9 +11,9 @@
     "# M2 Innovation Technologique et Entrepreunariat\n",
     "## Introduction au Machine Learning en situation\n",
     "\n",
-    "Auteurs: Guillaume Corlay & Marie Crappe\n",
+    "Auteurs: Guillaume Corlay & Marie Crappe & Livia Sossou\n",
     "\n",
-    "Date: 9 décembre 2016"
+    "Date: 4 janvier 2017"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -46,11 +46,25 @@
     }
    ],
    "source": [
+    "# The following command imports numpy as np and matplotlib as plt\n",
     "%pylab inline\n",
     "import pandas as pd\n",
-    "import warnings\n",
+    "import multiprocessing\n",
     "import re\n",
+    "\n",
     "from sklearn.preprocessing import Imputer\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import roc_auc_score, log_loss\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
+    "from sklearn.ensemble.partial_dependence import plot_partial_dependence\n",
+    "\n",
+    "from sklearn.cross_validation import KFold, cross_val_score\n",
+    "from itertools import combinations\n",
+    "from joblib import Parallel, delayed  \n",
+    "\n",
+    "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -22367,7 +22381,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
