--- a/Challenge ANAP.ipynb
+++ b/Challenge ANAP.ipynb
@@ -1214,21 +1214,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 87,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-87-11ab1393cf39>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-87-11ab1393cf39>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <h2> 2. Préparation des folds </h2>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "<h2> 2. Préparation des folds </h2>"
    ]
@@ -1272,10 +1261,8 @@
     "df_train = train2.iloc[:N_split]\n",
     "df_test = train2.iloc[N_split:]\n",
     "\n",
-    "#df_train = df_train.loc[df_train.QUANTITY_2DAYS < 1100]\n",
-    "\n",
-    "y_train = df_train.Target\n",
-    "y_test = df_test.Target\n",
+    "ytrain = df_train.Target\n",
+    "ytest = df_test.Target\n",
     "\n",
     "df_train = df_train.drop('Target', axis=1)\n",
     "df_test = df_test.drop('Target', axis=1)"
@@ -1352,8 +1339,8 @@
    "source": [
     "# Traitement des variables manquantes\n",
     "imputer = Imputer()\n",
-    "X_train = imputer.fit_transform(df_train)\n",
-    "X_test = imputer.transform(df_test)"
+    "xtrain = imputer.fit_transform(df_train)\n",
+    "xtest = imputer.transform(df_test)"
    ]
   },
   {
